--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,3 @@
-requests>=2.28
-pandas>=1.5
-tenacity>=8.2
-gspread>=5.10
-google-auth>=2.20
-PyYAML>=6.0
-python-dateutil>=2.8
+
+requests==2.31.0
+python-dateutil==2.8.2
